[package]
name = "file_manager-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.file_manager]
path = ".."

[[bin]]
name = "write_varint_fuzz"
path = "fuzz_targets/write_varint_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_varint_fuzz"
path = "fuzz_targets/read_varint_fuzz.rs"
test = false
doc = false
bench = false
